# FAST-API-MODEL

./: .env.example  main.py  pyproject.toml  requirements.txt
alembic/: README
docs/: scheduler_ml_documentation.typ
model/autoencoder/: autoencoder.keras  model_meta.pkl  preprocessing_meta.pkl
model/clustering/: kmeans_all_umap.pkl  label_map.json  scaler_all.pkl  umap_all.pkl
model/nlp/: nlp_model.pkl  tfidf_vectorizer.pkl
src/: app.py
src/core/: config.py  db.py
src/domain/entity/: account.py  customer.py  enums.py  i_report_repository.py  i_transaction_repository.py  report.py  transaction.py  user_credentials.py
src/features/scheduler/: scheduler_controller.py  scheduler_dependencies.py
src/features/scheduler/monthly/: schemas.py
src/features/scheduler/usecase/: run_monthly_usecase.py  run_weekly_usecase.py
src/features/scheduler/weekly/: schemas.py
src/features/user/: user_controller.py  user_dependencies.py
src/features/user/usecase/: get_all_users_usecase.py
src/infrastructure/repositories/: customer_repository.py  report_repository.py  transaction_repository.py
src/infrastructure/tables/: __init__.py  customer_table.py  detected_anomaly_table.py  monthly_report_table.py  transaction_table.py  weekly_report_table.py
src/ml/: autoencoder_service.py  clustering_service.py  model_loader.py  nlp_service.py  rag_service.py
src/ml/knowledge/: financial_kb.json
